# pryx

./: .gitignore  .gitleaks.toml  .gitmodules  .oxfmtrc.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rust.md  Cargo.toml  Dockerfile  Makefile  PRODUCTION_TEST_REPORT.md  README.md  README.rust.md  SESSION_SUMMARY.md  TEST_RESULTS.md  WEBSITE_REQUIREMENTS.md  docker-compose.yml  install.sh  package-lock.json  package.json  pr_comments.json  wrangler.toml  wrangler.toml.bak
.beads/: daemon-error  issues.jsonl
.github/workflows/: ci.yml  deploy-web.yml  release.yml  test.yml
.sisyphus/: ralph-loop.local.md  startup_optimization_plan.md
_legacy/.githooks/: pre-commit
_legacy/root_files/: .gitguardian.yaml
_legacy/scripts/: demo-credential-storage.ts  uninstall.sh
apps/host/: Cargo.toml  tauri.conf.json
apps/host/src/: sidecar_manager.rs  tests.rs
apps/host/src-tauri/src/: main.rs  tray.rs
apps/host/src/server/: routes.rs
apps/host/src/sidecar/: config.rs  mod.rs  permissions.rs  process.rs  tests.rs
apps/host/tests/: test_permissions.rs
apps/runtime/: audit.test  coverage.out  go.mod  go.sum
apps/tui/: THEME_UPDATE.md  index.jsx  index.tsx  manual-test.js  package.json
apps/web/: .gitignore  package.json  playwright.config.js  schema.sql  tsconfig.json  vitest.config.js  vitest.config.ts  worker.ts  worker_test.ts  wrangler.toml
docs/prd/: ai-assisted-setup.md  (+4 more)
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
scripts/: install.sh
src/: lib.rs  main.rs  migration.rs
tests/: memory_comparison.rs
(+396 files in other folders)
