[package]
name = "pryx-host"
version = "0.1.0"
edition = "2021"

[lib]
name = "pryx_host"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
anyhow = "1.0"
libc = "0.2"
thiserror = "1.0"
env_logger = "0.11"

[dev-dependencies]
# Testing frameworks
env_logger = "0.11"

[build-dependencies]
tauri-build = "2"

[[bin]]
name = "pryx-host"
path = "src-tauri/src/main.rs"
